# Dynamic-Color

./: .gitignore  README.md
C++ version/: CMakeLists.txt  readme.md
C++ version/examples/: example_0.ipynb  example_1.ipynb  example_2.ipynb  flat_grid.pkl  hie_grid.pkl  readme.md
C++ version/include/: cluster.hpp  color.hpp  colorpair.hpp  data.hpp  evaluator.hpp  evaluator_discri.hpp  evaluator_harmony.hpp  generator.hpp  kdtree.hpp  matrix.hpp  mtl_adjustor.hpp  palette_evaluator.hpp  scope.hpp  utils.hpp
C++ version/include/color-util/: Lab_to_XYZ.hpp  XYZ_to_RGB.hpp  type.hpp
C++ version/include/nanoflann/: nanoflann.hpp
C++ version/pybind11/: readme.txt
C++ version/src/: dynamic_color.cpp  evaluator_discri.cpp  generator.cpp  grid_data.cpp  line_data.cpp  palette_evaluator.cpp  scatter_data.cpp
JavaScirpt version/: dynamic_color.js  geometric_lc.js  hue_templates.js  readme.md  readme.txt  scope.js
JavaScirpt version/lib/: d3.color.min.js  utils.js
